--- a/app/views/home/about.jade
+++ b/app/views/home/about.jade
@@ -5,10 +5,11 @@ html
     title Address Book
     link(rel="stylesheet" href="/style/style.css")
   body
-    h1 this is about
+    h1 About
     nav
       ul
         li: a(href='/') Home
         li: a(href='/about') About
-        li: a(href='/faq') faq
+        li: a(href='/faq') FAQ
         li: a(href='/contact') contact
+        li: a(href='/people') People
