--- a/app/views/home/contact.jade
+++ b/app/views/home/contact.jade
@@ -6,10 +6,11 @@ html
     title Address Book
     link(rel="stylesheet" href="/style/style.css")
   body
-    h1 this is contact
+    h1 Contact
     nav
       ul
         li: a(href='/') Home
         li: a(href='/about') About
-        li: a(href='/faq') faq
+        li: a(href='/faq') FAQ
         li: a(href='/contact') contact
+        li: a(href='/people') People
