--- a/app/views/people/index.jade
+++ b/app/views/people/index.jade
@@ -6,7 +6,7 @@ html
     title Address Book
     link(rel="stylesheet" href="/style/style.css")
   body
-    h1 FAQ
+    h1 People
     nav
       ul
         li: a(href='/') Home
