--- a/app/views/home/contact.jade
+++ b/app/views/home/contact.jade
@@ -12,5 +12,5 @@ html
         li: a(href='/') Home
         li: a(href='/about') About
         li: a(href='/faq') FAQ
-        li: a(href='/contact') contact
+        li: a(href='/contact') Contact
         li: a(href='/people') People
