--- a/app/views/people/index.jade
+++ b/app/views/people/index.jade
@@ -12,15 +12,15 @@ html
         li: a(href='/') Home
         li: a(href='/about') About
         li: a(href='/faq') FAQ
-        li: a(href='/contact') contact
+        li: a(href='/contact') Contact
         li: a(href='/people') People
     each person in people
       .person
-        ul
-          li=person.name
+        ul(style="width:2in;height:2in;background-color:#{person.color}")
+          li.name
+            a(href="#{person.website}") #{person.name}
           li=person.phone
-          li=person.color
-          li=person.website
-          li=person.email
+          li
+            a(href="mailto:#{person.email}") #{person.email}
 
 
